[BUG] - Docs: Missing space in tagline on mobile (#154)

--- a/docs-root/src/components/HomepageHeader.module.css
+++ b/docs-root/src/components/HomepageHeader.module.css
@@ -110,4 +110,8 @@
 	.link {
 		width: 100%;
 	}
+
+	.heroSubtitle {
+		flex-direction: column;
+	}
 }
